Replace List.of() with Collections.singletonList() in McpAsyncClient.java
Co-Authored-By: 于泽棋 <finyu@webank.com>